--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+AR:wght@100..400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+AR:wght@100..400&family=Roboto+Slab:wght@100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,3 +10,12 @@
 /*    @apply text-red-500;*/
 /*  }*/
 /*}*/
+@layer base {
+  html {
+    /*font-family: "Playwrite AR", sans-serif;*/
+    font-family: "Roboto Slab", sans-serif;
+    .font-playwrite {
+      font-family: "Playwrite AR", sans-serif;
+    }
+  }
+}
